# speech_emotion_recognition

./: .gitignore  LICENSE  README.md  docker-compose.yml
analysis_and_learning/: Sukovatitsin_FQW_EDA_Preprocess.ipynb  Sukovatitsin_FQW_Learning_final.ipynb
backend/: Dockerfile  audio_processing.py  logger.py  main.py  model.py  models.py  pyproject.toml  requirements.txt  routers.py  schemas.py  text_processing.py  utils.py
backend/models/: fcnn_model.pth  label_encoder.pkl  random_forest_model.pkl
backend/models/rubert-tiny-sentiment-balanced/: config.json
frontend/: Dockerfile  api.py  main.py  requirements.txt  utils.py
frontend/pages/: about.py  predict.py  train.py
