[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of model interaction service"
authors = ["Simon <simonsnag@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
speechrecognition = "^3.14.2"
sounddevice = "^0.5.1"
librosa = "^0.11.0"
numpy = "^2.2.5"
scipy = "^1.15.2"
aiofiles = "^24.1.0"
scikit-learn = "^1.6.1"
loguru = "^0.7.3"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
transformers = "^4.52.4"
sentencepiece = "^0.2.0"
torch = "^2.7.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
